# cctrack

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/cctrack/: __init__.py  __main__.py
tests/: test_cctrack.py  test_hook.py  test_hook_reporting.py
