[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cctrack"
version = "0.4.0"
description = "Claude Code cost tracker — scans JSONL logs and reports token usage + estimated cost"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dan Rapp" },
]
keywords = ["claude", "anthropic", "cost", "tokens", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
]

[project.scripts]
cctrack = "cctrack:main"

[project.urls]
Homepage = "https://github.com/rappdw/cctrack"
Repository = "https://github.com/rappdw/cctrack"
Issues = "https://github.com/rappdw/cctrack/issues"
